--- a/src/__index.html
+++ b/src/__index.html
@@ -100,11 +100,13 @@
 												<div class="phone">+7 423 588-59-74</div>
 												<div class="info">
 													<ul class="contacts">
+														<li>г. Владивосток, ул. Молодежная, строение 1, корп. 3</li>
 														<li>Факс: (423) 254 48 86</li>
 														<li>Эл. почта: <a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></li>
 													</ul>
-													<div class="adr">г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>
 												</div>
+											</div>
+											<div class="main-section__footer">
 												<a href="#" class="btn-main">
 													<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="377.6 153.6 524.8 332.8" enable-background="new 377.6 153.6 524.8 332.8"> <path d="M377.6,153.6V179L640,368.2L902.4,179v-25.4H377.6z M377.6,210.6v275.8h524.8V210.6L640,399.8L377.6,210.6z"/> </svg>
 													<span>Обратная связь</span>
@@ -112,33 +114,33 @@
 											</div>
 										</div>
 									</div>
+									<!--main map-->
+									<script>
+										var mainMapPosition = {
+											'desktop': {
+												'lat': 43.11329616,
+												'lng': 131.92525506,
+												'zoom': 14
+											}
+										};
+										var mainMapObjects = [
+											[
+												{lat: 43.10692, lng: 131.95718}, //coordinates of marker
+												'img/map-pin.png', //image pin
+												{
+													title: 'ДВЭМЗ',
+													address: '<b>Адрес</b> <div>г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>',
+													phone: '<b>Тел.</b> <div><a href="tel:+7 423 588-59-74">+7 423 588-59-74</a></div>',
+													fax: '<b>Факс</b> <div>(423) 254 48 86</div>',
+													mail: '<b>Эл. почта</b> <div><a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></div>'
+												}
+											]
+										];
+									</script>
+									<div class="main-map fp-bg" id="main-map"></div>
+									<!--main map end-->
 								</div>
 							</div>
-							<!--main map-->
-							<script>
-								var mainMapPosition = {
-									'desktop': {
-										'lat': 43.11329616,
-										'lng': 131.92525506,
-										'zoom': 14
-									}
-								};
-								var mainMapObjects = [
-									[
-										{lat: 43.10692, lng: 131.95718}, //coordinates of marker
-										'img/map-pin.png', //image pin
-										{
-											title: 'ДВЭМЗ',
-											address: '<b>Адрес</b> <div>г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>',
-											phone: '<b>Тел.</b> <div><a href="tel:+7 423 588-59-74">+7 423 588-59-74</a></div>',
-											fax: '<b>Факс</b> <div>(423) 254 48 86</div>',
-											mail: '<b>Эл. почта</b> <div><a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></div>'
-										}
-									]
-								];
-							</script>
-							<div class="main-map fp-bg" id="main-map"></div>
-							<!--main map end-->
 						</section>
 					</div>
 				</div>
