--- a/src/__index.html
+++ b/src/__index.html
@@ -24,6 +24,11 @@
 			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="260.7 35 431.7 490" enable-background="new 260.7 35 431.7 490"> <g id="Layer_3"> <path d="M340,340.7h179.7v-23.3H340V340.7z M594.3,105V35H260.7v420h98v70h333.7V105H594.3z M284,429.3V56h287v373.3H284z    M669,501.7H379.7V455h214.7V128.3H669V501.7z M340,247.3h179.7V224H340V247.3z M340,154h179.7v-23.3H340V154z"></path> </g> </svg>
 		</a>
 	</li>
+	<li data-menuanchor="mainSectionProviders">
+		<a href="#mainSectionProviders">Поставщикам
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 266 318.3" enable-background="new 0 0 266 318.3"> <path d="M175.1,156.3c25-14.5,41.9-41.6,41.9-72.5C217,37.6,179.4,0,133.3,0S49.5,37.6,49.5,83.8c0,30.9,16.8,57.9,41.8,72.4    C38.3,172.9,0,220.6,0,276.8v41.5h265.7l0.3-41.5C266,220.8,227.9,173.1,175.1,156.3z M69.5,83.8c0-35.2,28.6-63.8,63.8-63.8    c35.2,0,63.8,28.6,63.8,63.8s-28.6,63.8-63.8,63.8C98.1,147.5,69.5,118.9,69.5,83.8z M245.8,298.3H20v-21.5c0-59,50.7-107,113-107    s113,48,113,106.9L245.8,298.3z"></path> </svg>
+		</a>
+	</li>
 	<li data-menuanchor="mainSectionContacts">
 		<a href="#mainSectionContacts">Контакты
 			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="309.7 35 350 478.3" enable-background="new 309.7 35 350 478.3"> <g id="Layer_2"> <path d="M484.7,35c-95.7,0-175,77-175,175c0,30.3,6.1,58.1,20.1,83.7l154.9,219.6L627,312.7c21-30.3,32.7-65.3,32.7-102.7   C662,112,582.7,35,484.7,35z M608.3,298.7L484.7,471.3L372.7,315l0,0l-14-18.7c-16.3-25.7-25.7-56-25.7-86.3   c0-84,67.7-151.7,151.7-151.7S636.3,126,636.3,210C638.7,242.7,627,273,608.3,298.7z M484.7,137.7c-39.7,0-70,32.7-70,70   c0,39.7,32.7,70,70,70s70-32.7,70-70C557,170.3,524.3,137.7,484.7,137.7z M484.7,256.7c-25.7,0-46.7-21-46.7-46.7   s21-46.7,46.7-46.7s46.7,21,46.7,46.7C531.3,235.7,510.3,256.7,484.7,256.7z"></path> </g> </svg>
@@ -90,6 +95,45 @@
 								</div>
 							</div>
 						</section>
+						<section class="main-section main-section--providers" data-anchor="mainSectionProviders">
+							<div class="fp-bg"></div>
+							<div class="main-section__container">
+								<div class="main-section__align">
+									<div class="main-section__layout">
+										<div class="main-section__title">
+											<h2>Поставщикам</h2>
+											<div class="subtitle">ДВЭМЗ объединил в себе сразу три канала сбыта для наших поставщиков</div>
+										</div>
+										<div class="main-section__holder">
+											<div class="agency">
+												<div class="agency__holder">
+													@@loop('_agency-item.tpl', 'includes-json/agency-items.json')
+												</div>
+											</div>
+											<div class="providers">
+												<div class="providers__item">
+													<div class="providers__text">
+														<p>Мы постоянно мониторим рынок поставщиков необходимого нам оборудования и будем рады новым партнерам! Всегда готовы рассмотреть Ваше предложение, если оно является конкурентым! Большая просьба к Вам, уважаемые потенциальные партнеры - если Вы не уверенны, что Ваше предложение не является таковым, не тратьте свое и наше время. Если у Вас есть реально интересное предложение, с удовольствием его рассмотрим и начнем работать с Вами! </p>
+													</div>
+												</div>
+												<div class="providers__item">
+													<div class="providers__title">Группы товаров, которые нам интересны:</div>
+													<ul class="providers__list">
+														<li>кабельно-проводниковая продукция</li>
+														<li>трансформаторы</li>
+														<li>муфты</li>
+														<li>выключатели автоматические, разъединители</li>
+														<li>высоковольтное оборудование</li>
+														<li>шины, монтажные изделия</li>
+													</ul>
+												</div>
+											</div>
+											<div class="plea">Если у Вас есть интересное предложение по этим группам товаров — отправляйте его нам на <a href="mailto:snab@dvemz.ru">snab@dvemz.ru<span></span></a>!</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</section>
 						<section class="main-section main-section--map" data-anchor="mainSectionContacts">
 							<div class="main-section__container">
 								<div class="main-section__align">
@@ -97,42 +141,42 @@
 										<div class="main-section__pos">
 											<div class="main-section__title"><h2>Контакты</h2></div>
 											<div class="main-section__holder">
-												<div class="phone">+7 423 588-59-74</div>
+												<div class="phone">+7 (423) 230-21-37</div>
 												<div class="info">
 													<ul class="contacts">
-														<li>г. Владивосток, ул. Молодежная, строение 1, корп. 3</li>
-														<li>Факс: (423) 254 48 86</li>
-														<li>Эл. почта: <a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></li>
+														<li>г. Владивосток, ул. Всеволода Сибирцева, 15, оф. 311</li>
+														<!--<li>Факс: (423) 254 48 86</li>-->
+														<li>Эл. почта: <a href="mailto:info@dvemz.ru">info@dvemz.ru</a></li>
 													</ul>
 												</div>
 											</div>
-											<div class="main-section__footer">
+											<!--<div class="main-section__footer">
 												<a href="#" class="btn-main">
 													<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="377.6 153.6 524.8 332.8" enable-background="new 377.6 153.6 524.8 332.8"> <path d="M377.6,153.6V179L640,368.2L902.4,179v-25.4H377.6z M377.6,210.6v275.8h524.8V210.6L640,399.8L377.6,210.6z"/> </svg>
 													<span>Обратная связь</span>
 												</a>
-											</div>
+											</div>-->
 										</div>
 									</div>
 									<!--main map-->
 									<script>
 										var mainMapPosition = {
 											'desktop': {
-												'lat': 43.11329616,
-												'lng': 131.92525506,
+												'lat': 43.1166704,
+												'lng': 131.8997327,
 												'zoom': 14
 											}
 										};
 										var mainMapObjects = [
 											[
-												{lat: 43.10692, lng: 131.95718}, //coordinates of marker
+												{lat: 43.1066704, lng: 131.9257327}, //coordinates of marker
 												'img/map-pin.png', //image pin
 												{
 													title: 'ДВЭМЗ',
-													address: '<b>Адрес</b> <div>г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>',
-													phone: '<b>Тел.</b> <div><a href="tel:+7 423 588-59-74">+7 423 588-59-74</a></div>',
-													fax: '<b>Факс</b> <div>(423) 254 48 86</div>',
-													mail: '<b>Эл. почта</b> <div><a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></div>'
+													address: '<b>Адрес</b> <div>г. Владивосток, ул. Всеволода Сибирцева, 15</div>',
+													phone: '<b>Тел.</b> <div><a href="tel:+7 (423) 230-21-37">+7 (423) 230-21-37</a></div>',
+//													fax: '<b>Факс</b> <div>(423) 254 48 86</div>',
+													mail: '<b>Эл. почта</b> <div><a href="mailto:info@dvemz.ru">info@dvemz.ru</a></div>'
 												}
 											]
 										];
