--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,9 @@
 				<div class="header__cell">
 					<div class="logo">
 						<a href="index.html">
-							<div class="logo-img">ДВЭМЗ</div>
-							<div class="logo-title">Дальневосточный электромонтажный завод</div>
-							<div class="logo-text">Производство и продажа Электромонтажного оборудования</div>
+							<div class="logo-img"><span>ДВЭМЗ</span></div>
+							<div class="logo-title"><span>Дальневосточный электромонтажный завод</span></div>
+							<div class="logo-text"><span>Производство и продажа Электромонтажного оборудования</span></div>
 						</a>
 						<img style="display: none;" src="img/logo.png" alt="ДВЭМЗ">
 					</div>
@@ -56,33 +56,33 @@
 			</div>
 			<div class="header__row">
 				<div class="header__cell">
-					<div class="user-options">
-						<a href="#" class="user-option__item btn-menu-js menu-btn" title="Открыть главное меню">
-							<div class="menu-btn__inner">
-								<span>Меню</span>
-								<i>&nbsp;</i>
-							</div>
-						</a>
-						<a href="#" class="user-option__item">
-							<div class="user-option__icon">
-								<span>Текст</span>
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 551.7 548.4" enable-background="new 0 0 551.7 548.4"> <path d="M353.9,374.2l-12,4.6c-1.2,0.4-3,1.1-5.1,2.5c-0.6,0.4-1.2,0.9-1.9,1.3c-0.6,0.4-1.2,0.8-1.8,1.2  c-38.7,26.4-79.2,39.8-120.2,39.8c-18.3,0-37-2.7-55.7-7.9c-42.1-11.8-76.4-32-101.9-59.9c-25.2-27.6-42.7-63.8-52-107.4  c-1.1-5-1.7-10.4-2.4-16.1c-0.3-2.4-0.6-4.8-0.9-7.2v-25.5c0.3-1.4,0.7-3.2,0.8-5.4c2.3-27.7,9.7-53.9,22-77.9  C59.9,44.6,131.8,0,210.5,0c31.4,0,61.9,7,90.8,20.9c74,35.5,114.4,96.3,120.3,180.9c3.1,44.2-8.9,87.1-35.5,127.5  c-0.9,1.3-1.6,2.6-2.3,3.7c-0.3,0.4-0.5,0.9-0.8,1.3l-8.1,13.1l10.5,11.2l0.7,0.7c0.6,0.7,1.1,1.2,1.7,1.8  c54.6,54.6,109.2,109.2,163.8,163.8c-7.8,7.8-15.6,15.7-23.6,23.6L353.9,374.2z M211.5,33.4c-98.1,0-178.2,79.8-178.4,178  c-0.1,47.6,18.4,92.5,52.1,126.3c33.8,33.9,78.6,52.5,126.3,52.6c98.3,0,178.3-80,178.4-178.3c0.1-98.3-79.8-178.4-178.1-178.5  H211.5z"></path> </svg>
-							</div>
-						</a>
-						<a href="#" class="user-option__item">
-							<div class="user-option__icon">
-								<span>Текст</span>
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 266 318.3" enable-background="new 0 0 266 318.3"> <path d="M175.1,156.3c25-14.5,41.9-41.6,41.9-72.5C217,37.6,179.4,0,133.3,0S49.5,37.6,49.5,83.8c0,30.9,16.8,57.9,41.8,72.4    C38.3,172.9,0,220.6,0,276.8v41.5h265.7l0.3-41.5C266,220.8,227.9,173.1,175.1,156.3z M69.5,83.8c0-35.2,28.6-63.8,63.8-63.8    c35.2,0,63.8,28.6,63.8,63.8s-28.6,63.8-63.8,63.8C98.1,147.5,69.5,118.9,69.5,83.8z M245.8,298.3H20v-21.5c0-59,50.7-107,113-107    s113,48,113,106.9L245.8,298.3z"></path> </svg>
-							</div>
-						</a>
-						<a href="#" class="user-option__item">
-							<div class="user-option__icon">
-								<div class="basket-counter">1</div>
-								<span>Текст</span>
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-							</div>
-						</a>
-					</div>
+					<!--<div class="user-options">
+					<a href="#" class="user-option__item btn-menu-js menu-btn" title="Открыть главное меню">
+						<div class="menu-btn__inner">
+							<span>Меню</span>
+							<i>&nbsp;</i>
+						</div>
+					</a>
+					<a href="#" class="user-option__item">
+						<div class="user-option__icon">
+							<span>Текст</span>
+							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 551.7 548.4" enable-background="new 0 0 551.7 548.4"> <path d="M353.9,374.2l-12,4.6c-1.2,0.4-3,1.1-5.1,2.5c-0.6,0.4-1.2,0.9-1.9,1.3c-0.6,0.4-1.2,0.8-1.8,1.2  c-38.7,26.4-79.2,39.8-120.2,39.8c-18.3,0-37-2.7-55.7-7.9c-42.1-11.8-76.4-32-101.9-59.9c-25.2-27.6-42.7-63.8-52-107.4  c-1.1-5-1.7-10.4-2.4-16.1c-0.3-2.4-0.6-4.8-0.9-7.2v-25.5c0.3-1.4,0.7-3.2,0.8-5.4c2.3-27.7,9.7-53.9,22-77.9  C59.9,44.6,131.8,0,210.5,0c31.4,0,61.9,7,90.8,20.9c74,35.5,114.4,96.3,120.3,180.9c3.1,44.2-8.9,87.1-35.5,127.5  c-0.9,1.3-1.6,2.6-2.3,3.7c-0.3,0.4-0.5,0.9-0.8,1.3l-8.1,13.1l10.5,11.2l0.7,0.7c0.6,0.7,1.1,1.2,1.7,1.8  c54.6,54.6,109.2,109.2,163.8,163.8c-7.8,7.8-15.6,15.7-23.6,23.6L353.9,374.2z M211.5,33.4c-98.1,0-178.2,79.8-178.4,178  c-0.1,47.6,18.4,92.5,52.1,126.3c33.8,33.9,78.6,52.5,126.3,52.6c98.3,0,178.3-80,178.4-178.3c0.1-98.3-79.8-178.4-178.1-178.5  H211.5z"></path> </svg>
+						</div>
+					</a>
+					<a href="#" class="user-option__item">
+						<div class="user-option__icon">
+							<span>Текст</span>
+							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 266 318.3" enable-background="new 0 0 266 318.3"> <path d="M175.1,156.3c25-14.5,41.9-41.6,41.9-72.5C217,37.6,179.4,0,133.3,0S49.5,37.6,49.5,83.8c0,30.9,16.8,57.9,41.8,72.4    C38.3,172.9,0,220.6,0,276.8v41.5h265.7l0.3-41.5C266,220.8,227.9,173.1,175.1,156.3z M69.5,83.8c0-35.2,28.6-63.8,63.8-63.8    c35.2,0,63.8,28.6,63.8,63.8s-28.6,63.8-63.8,63.8C98.1,147.5,69.5,118.9,69.5,83.8z M245.8,298.3H20v-21.5c0-59,50.7-107,113-107    s113,48,113,106.9L245.8,298.3z"></path> </svg>
+						</div>
+					</a>
+					<a href="#" class="user-option__item">
+						<div class="user-option__icon">
+							<div class="basket-counter">1</div>
+							<span>Текст</span>
+							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
+						</div>
+					</a>
+				</div>-->
 				</div>
 			</div>
 			<div class="header__row">
@@ -143,23 +143,38 @@
 	<!--HEADER end-->
 	<!--TOP PANEL-->
 	<aside class="top-panel">
-		<div class="top-panel__widget">
-			<!--contact phones-->
-			<div class="contact-phones js-choice-wrap" data-select="false">
-				<a class="contact-phones__handler js-choice-open" href="#"><span>+7 (423) 230-20-13</span></a>
-				<ul class="contact-phones__drop js-choice-drop">
-					<li><a href="tel:+7 (423) 230-20-13"><span>+7 (423) 230-20-13</span></a></li>
-					<li><a href="tel:+7 (423) 275-27-17"><span>+7 (423) 275-27-17</span></a></li>
-					<li><a href="tel:+7 (423) 578-80-18"><span>+7 (423) 578-80-18</span></a></li>
-					<li><a href="tel:+7 (423) 230-20-13"><span>+7 (423) 230-20-13</span></a></li>
-					<li><a href="tel:+7 (423) 275-27-17"><span>+7 (423) 275-27-17</span></a></li>
-					<li><a href="tel:+7 (423) 578-80-18"><span>+7 (423) 578-80-18</span></a></li>
-				</ul>
-			</div>
-			<!--contact phones end-->
+		<div class="logo-alt">
+			<a href="index.html">
+				<div class="logo-title">
+					<div class="fig"><span>Дальневосточный электромонтажный завод</span></div>
+				</div>
+				<div class="logo-map">
+					<div class="fig"><span>владивосток</span></div>
+				</div>
+			</a>
+			<img style="display: none;" src="img/logo.png" alt="ДВЭМЗ">
 		</div>
-		<div class="top-panel__widget">
-			<a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a>
+		<div class="top-panel-contacts">
+			<div class="top-panel-contacts__item">
+				<!--contact phones-->
+				<!--<div class="contact-phones js-choice-wrap" data-select="false">-->
+				<div class="contact-phones">
+					<!--<a class="contact-phones__handler js-choice-open" href="#"><span>+7 (423) 230-21-37</span></a>-->
+					<a class="contact-phones__handler" href="tel:+7 (423) 230-21-37"><span>+7 (423) 230-21-37</span></a>
+					<!--<ul class="contact-phones__drop js-choice-drop">
+					<li><a href="tel:+7 (423) 230-20-13"><span>+7 (423) 230-20-13</span></a></li>
+					<li><a href="tel:+7 (423) 275-27-17"><span>+7 (423) 275-27-17</span></a></li>
+					<li><a href="tel:+7 (423) 578-80-18"><span>+7 (423) 578-80-18</span></a></li>
+					<li><a href="tel:+7 (423) 230-20-13"><span>+7 (423) 230-20-13</span></a></li>
+					<li><a href="tel:+7 (423) 275-27-17"><span>+7 (423) 275-27-17</span></a></li>
+					<li><a href="tel:+7 (423) 578-80-18"><span>+7 (423) 578-80-18</span></a></li>
+				</ul>-->
+				</div>
+				<!--contact phones end-->
+			</div>
+			<div class="top-panel-contacts__item">
+				<a href="mailto:info@dvemz.ru"><span>info@dvemz.ru</span></a>
+			</div>
 		</div>
 	</aside>
 	<!--TOP PANEL end-->
@@ -173,6 +188,11 @@
 		<li data-menuanchor="mainSectionNews">
 			<a href="#mainSectionNews">Новости
 			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="260.7 35 431.7 490" enable-background="new 260.7 35 431.7 490"> <g id="Layer_3"> <path d="M340,340.7h179.7v-23.3H340V340.7z M594.3,105V35H260.7v420h98v70h333.7V105H594.3z M284,429.3V56h287v373.3H284z    M669,501.7H379.7V455h214.7V128.3H669V501.7z M340,247.3h179.7V224H340V247.3z M340,154h179.7v-23.3H340V154z"></path> </g> </svg>
+		</a>
+		</li>
+		<li data-menuanchor="mainSectionProviders">
+			<a href="#mainSectionProviders">Поставщикам
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 266 318.3" enable-background="new 0 0 266 318.3"> <path d="M175.1,156.3c25-14.5,41.9-41.6,41.9-72.5C217,37.6,179.4,0,133.3,0S49.5,37.6,49.5,83.8c0,30.9,16.8,57.9,41.8,72.4    C38.3,172.9,0,220.6,0,276.8v41.5h265.7l0.3-41.5C266,220.8,227.9,173.1,175.1,156.3z M69.5,83.8c0-35.2,28.6-63.8,63.8-63.8    c35.2,0,63.8,28.6,63.8,63.8s-28.6,63.8-63.8,63.8C98.1,147.5,69.5,118.9,69.5,83.8z M245.8,298.3H20v-21.5c0-59,50.7-107,113-107    s113,48,113,106.9L245.8,298.3z"></path> </svg>
 		</a>
 		</li>
 		<li data-menuanchor="mainSectionContacts">
@@ -291,6 +311,60 @@
 									</div>
 								</div>
 							</section>
+							<section class="main-section main-section--providers" data-anchor="mainSectionProviders">
+								<div class="fp-bg"></div>
+								<div class="main-section__container">
+									<div class="main-section__align">
+										<div class="main-section__layout">
+											<div class="main-section__title">
+												<h2>Поставщикам</h2>
+												<div class="subtitle">ДВЭМЗ объединил в себе сразу три канала сбыта для наших поставщиков</div>
+											</div>
+											<div class="main-section__holder">
+												<div class="agency">
+													<div class="agency__holder">
+														<div class="agency__item">
+															<div class="agency__inner">
+																<div class="agency__text">Монтажное предприятие</div>
+															</div>
+														</div>
+														<div class="agency__item">
+															<div class="agency__inner">
+																<div class="agency__text">Производитель электрощитового оборудования</div>
+															</div>
+														</div>
+														<div class="agency__item">
+															<div class="agency__inner">
+																<div class="agency__text">Торгующая электротехническая компания</div>
+															</div>
+														</div>
+													</div>
+												</div>
+												<div class="providers">
+													<div class="providers__item">
+														<div class="providers__text">
+															<p>Мы постоянно мониторим рынок поставщиков необходимого нам оборудования и будем рады новым партнерам! Всегда готовы рассмотреть Ваше предложение, если оно является конкурентым! Большая просьба к Вам, уважаемые потенциальные партнеры - если
+																Вы не уверенны, что Ваше предложение не является таковым, не тратьте свое и наше время. Если у Вас есть реально интересное предложение, с удовольствием его рассмотрим и начнем работать с Вами! </p>
+														</div>
+													</div>
+													<div class="providers__item">
+														<div class="providers__title">Группы товаров, которые нам интересны:</div>
+														<ul class="providers__list">
+															<li>кабельно-проводниковая продукция</li>
+															<li>трансформаторы</li>
+															<li>муфты</li>
+															<li>выключатели автоматические, разъединители</li>
+															<li>высоковольтное оборудование</li>
+															<li>шины, монтажные изделия</li>
+														</ul>
+													</div>
+												</div>
+												<div class="plea">Если у Вас есть интересное предложение по этим группам товаров — отправляйте его нам на <a href="mailto:snab@dvemz.ru">snab@dvemz.ru<span></span></a>!</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</section>
 							<section class="main-section main-section--map" data-anchor="mainSectionContacts">
 								<div class="main-section__container">
 									<div class="main-section__align">
@@ -300,44 +374,44 @@
 													<h2>Контакты</h2>
 												</div>
 												<div class="main-section__holder">
-													<div class="phone">+7 423 588-59-74</div>
+													<div class="phone">+7 (423) 230-21-37</div>
 													<div class="info">
 														<ul class="contacts">
-															<li>г. Владивосток, ул. Молодежная, строение 1, корп. 3</li>
-															<li>Факс: (423) 254 48 86</li>
-															<li>Эл. почта: <a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></li>
+															<li>г. Владивосток, ул. Всеволода Сибирцева, 15, оф. 311</li>
+															<!--<li>Факс: (423) 254 48 86</li>-->
+															<li>Эл. почта: <a href="mailto:info@dvemz.ru">info@dvemz.ru</a></li>
 														</ul>
 													</div>
 												</div>
-												<div class="main-section__footer">
-													<a href="#" class="btn-main">
-														<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="377.6 153.6 524.8 332.8" enable-background="new 377.6 153.6 524.8 332.8"> <path d="M377.6,153.6V179L640,368.2L902.4,179v-25.4H377.6z M377.6,210.6v275.8h524.8V210.6L640,399.8L377.6,210.6z"/> </svg>
-														<span>Обратная связь</span>
-													</a>
-												</div>
+												<!--<div class="main-section__footer">
+												<a href="#" class="btn-main">
+													<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="377.6 153.6 524.8 332.8" enable-background="new 377.6 153.6 524.8 332.8"> <path d="M377.6,153.6V179L640,368.2L902.4,179v-25.4H377.6z M377.6,210.6v275.8h524.8V210.6L640,399.8L377.6,210.6z"/> </svg>
+													<span>Обратная связь</span>
+												</a>
+											</div>-->
 											</div>
 										</div>
 										<!--main map-->
 										<script>
 											var mainMapPosition = {
 												'desktop': {
-													'lat': 43.11329616,
-													'lng': 131.92525506,
+													'lat': 43.1166704,
+													'lng': 131.8997327,
 													'zoom': 14
 												}
 											};
 											var mainMapObjects = [
 												[{
-														lat: 43.10692,
-														lng: 131.95718
+														lat: 43.1066704,
+														lng: 131.9257327
 													}, //coordinates of marker
 													'img/map-pin.png', //image pin
 													{
 														title: 'ДВЭМЗ',
-														address: '<b>Адрес</b> <div>г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>',
-														phone: '<b>Тел.</b> <div><a href="tel:+7 423 588-59-74">+7 423 588-59-74</a></div>',
-														fax: '<b>Факс</b> <div>(423) 254 48 86</div>',
-														mail: '<b>Эл. почта</b> <div><a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></div>'
+														address: '<b>Адрес</b> <div>г. Владивосток, ул. Всеволода Сибирцева, 15</div>',
+														phone: '<b>Тел.</b> <div><a href="tel:+7 (423) 230-21-37">+7 (423) 230-21-37</a></div>',
+														//													fax: '<b>Факс</b> <div>(423) 254 48 86</div>',
+														mail: '<b>Эл. почта</b> <div><a href="mailto:info@dvemz.ru">info@dvemz.ru</a></div>'
 													}
 												]
 											];
@@ -381,12 +455,12 @@
 								<strong class="side-menu__title">Высоковольтное оборудование</strong>
 							</a>
 						</div>
-						<div class="side-menu__row">
-							<a href="files/pdf-test.pdf" class="side-menu__cell download">
-								<div class="download__icon" data-label="PDF"><span>PDF</span></div>
-								<div class="download__title">Каталог продукции <span>Скачать .pdf</span></div>
-							</a>
-						</div>
+						<!--<div class="side-menu__row">
+			<a href="files/pdf-test.pdf" class="side-menu__cell download">
+				<div class="download__icon" data-label="PDF"><span>PDF</span></div>
+				<div class="download__title">Каталог продукции <span>Скачать .pdf</span></div>
+			</a>
+		</div>-->
 					</div>
 				</aside>
 				<!--SIDEBAR-->
