--- a/src/__index.html
+++ b/src/__index.html
@@ -128,7 +128,7 @@
 													</ul>
 												</div>
 											</div>
-											<div class="plea">Если у Вас есть интересное предложение по этим группам товаров — отправляйте его нам на <a href="mailto:snab@dvemz.ru">snab@dvemz.ru<span></span></a>!</div>
+											<div class="plea">Если у Вас есть интересное предложение по этим группам товаров — отправляйте его нам на <a href="mailto:info@dvemz.ru">info@dvemz.ru<span></span></a>!</div>
 										</div>
 									</div>
 								</div>
@@ -162,14 +162,15 @@
 									<script>
 										var mainMapPosition = {
 											'desktop': {
-												'lat': 43.1166704,
-												'lng': 131.8997327,
-												'zoom': 14
+												'lat': 43.1216,
+												'lng': 131.8827,
+												'zoom': 15
 											}
 										};
 										var mainMapObjects = [
 											[
-												{lat: 43.1066704, lng: 131.9257327}, //coordinates of marker
+//												{lat: 43.1166704, lng: 131.8997327}, //coordinates of marker
+												{lat: 43.1166, lng: 131.8997}, //coordinates of marker
 												'img/map-pin.png', //image pin
 												{
 													title: 'ДВЭМЗ',
