--- a/src/__index.html
+++ b/src/__index.html
@@ -1,6 +1,6 @@
 @@include('_layout_head.tpl', {
 	"title": "Главная",
-	"pageClass": "home-page top-panel--alt"
+	"pageClass": "home-page top-panel--alt side-menu--alt"
 })
 <!--HEADER-->
 @@include('_layout_header.tpl', {
