--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 	<script src="js/modernizr.min.js"></script>
 </head>
 
-<body class="home-page top-panel--alt">
+<body class="home-page top-panel--alt side-menu--alt">
 	<!--[if lt IE 9]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<!--HEADER-->
