--- a/src/__typography.html
+++ b/src/__typography.html
@@ -381,7 +381,7 @@
 								<a href="#hashUserFormExample" id="hashUserFormExample" class="hashAnchor"><span class="mark">Форма обратной связи</span></a>
 							</h3>
 							@@include('_forms_user-form.tpl', {
-							"title": "Заголовок формы"
+								"title": "Задать вопрос"
 							})
 							<!--user form end-->
 
