--- a/src/typography.html
+++ b/src/typography.html
@@ -880,7 +880,7 @@
 								</h3>
 								<div class="user-form layout-full-width">
 									<div class="layout-text">
-										<div class="form-title">Заголовок формы</div>
+										<div class="form-title">Задать вопрос</div>
 										<form action="#" method="get">
 											<div class="input-wrap">
 												<div class="label-holder">
